# FrameworkCS2

./: .clang-tidy  .clangd  .gitignore  Build.sh  CMakeLists.txt  Debug.sh  HOWTODEBUG.md  LICENSE  Load.sh  README.md  Unload.sh
.github/workflows/: build.yml
Buildscripts/: BCRL.cmake  BuildParameters.cmake  ConvexHull.cmake  DetourHooking.cmake  GLM.cmake  GenericESP.cmake  ImGUI.cmake  ImNodes.cmake  LZ4.cmake  LibConfig.cmake  Licenses.cmake  MagicEnum.cmake  MurmurHash.cmake  Nlohmann.cmake  NlohmannJson.cmake  Obfuscation.cmake  Octree.cmake  OrderedMap.cmake  Protobuf.cmake  ReturnAddressSpoofer.cmake  SDL3.cmake  SmallVector.cmake  StaticLibatomic.cmake
Patches/ImGUI/: ExposeSetupDrawListSharedData.patch  FullyRoundedTabs.patch  PrependDrawList.patch  RoundedImageButtons.patch
Patches/ImNodes/: DontRedefineMacros.patch
Patches/Protobuf/: ProtocOnlyCXX.patch
Patches/octree-cpp/: DisableTests.patch  FixConceptDecl.patch
Patches/ordered_map/: DontInstall.patch  IncreaseCMakeMinimumVersion.patch
Protobufs/: cs_usercmd.proto  cstrike15_gcmessages.proto  cstrike15_usermessages.proto  steammessages.proto  update.sh  usercmd.proto
Source/: Interfaces.cpp  Interfaces.hpp  Libraries.cpp  Libraries.hpp  Main.cpp  Memory.cpp  Memory.hpp
Source/Config/: Config.cpp  Config.hpp  Key.cpp  Key.hpp  Keybinds.cpp  Keybinds.hpp  Setting.hpp
Source/Features/: BindableSetting.hpp  ESP.cpp  ESP.hpp  Feature.cpp  Feature.hpp  Features.cpp  Features.hpp  ForceCrosshair.cpp  ForceCrosshair.hpp  LoadingTextChanger.cpp  Menu.cpp  Menu.hpp  Setting.cpp  Setting.hpp
Source/Features/Combat/: Aimbot.cpp  Aimbot.hpp
Source/Features/Conditions/: IdType.hpp  Node.cpp  Node.hpp  NodeCircuit.cpp  NodeCircuit.hpp  NodeRegistry.cpp  NodeRegistry.hpp  NodeResult.hpp  NodeType.hpp  Nodes.hpp  SettingWithConditions.hpp
Source/Features/Griefing/: AutoPickup.cpp  AutoPickup.hpp  BlockBot.cpp  BlockBot.hpp
Source/Features/Instrumentation/: InstrumentableSetting.hpp  Node.hpp  NodeCircuit.cpp  NodeCircuit.hpp  NodeRegistry.cpp  NodeRegistry.hpp  NodeResult.hpp  NodeType.hpp
Source/Features/Misc/: AutoAccept.cpp  AutoAccept.hpp  AutoStrafer.cpp  AutoStrafer.hpp  Bhop.cpp  Bhop.hpp  BombTimer.cpp  BombTimer.hpp  ForceCrosshair.cpp  ForceCrosshair.hpp  Griefing.cpp  Griefing.hpp  Hitmarker.cpp  Hitmarker.hpp  LoadingTextChanger.cpp  VoteRevealer.cpp  VoteRevealer.hpp
Source/Features/PlayerList/: Columns.hpp  PlayerList.cpp  PlayerList.hpp  PlayerListWidget.cpp  PlayerListWidget.hpp
Source/Features/Settings/: Button.cpp  Button.hpp  Checkbox.cpp  Checkbox.hpp  Color.cpp  Color.hpp  Combo.hpp  DynamicTabs.hpp  FloatDrag.cpp  FloatDrag.hpp  FloatSlider.cpp  FloatSlider.hpp  HelpMarker.cpp  HelpMarker.hpp  MetaSetting.cpp  MetaSetting.hpp  Section.cpp  Section.hpp  Subgroup.cpp  Subgroup.hpp  Tabs.cpp  Tabs.hpp  Text.cpp  Text.hpp  TextInput.cpp  TextInput.hpp
Source/Features/Visuals/: BulletTracers.cpp  BulletTracers.hpp  Chams.cpp  Chams.hpp  ESP.cpp  ESP.hpp  FieldOfView.cpp  FieldOfView.hpp  ForceCrosshair.cpp  ForceCrosshair.hpp  ForceThirdPerson.cpp  ForceThirdPerson.hpp  Glow.cpp  Glow.hpp  GrenadeHelper.cpp  GrenadeHelper.hpp  GrenadePrediction.cpp  GrenadePrediction.hpp  LoadingTextChanger.cpp  LoadingTextChanger.hpp  ModelChanger.cpp  ModelChanger.hpp  Radar.cpp  Radar.hpp  Removals.cpp  Removals.hpp  WorldColors.cpp  (+1 more)
Source/GUI/: GUI.cpp  GUI.hpp  ImageLoader.cpp  ImageLoader.hpp  InputManager.cpp  InputManager.hpp  TextureManager.cpp  TextureManager.hpp  Theme.cpp  Theme.hpp
Source/GameHook/: FireEvent.cpp  FrameStageNotify.cpp  GameHook.cpp  GameHook.hpp  GetFunLoading.cpp  ShouldShowCrosshair.cpp
Source/GraphicsHook/: GraphicsHook.cpp  GraphicsHook.hpp  SDLHook.cpp  VulkanHook.cpp
Source/Hooks/: Hooks.cpp  Hooks.hpp
Source/Menu/: Menu.cpp  Menu.hpp
Source/Notifications/: Notifications.cpp  Notifications.hpp
Source/SDK/: ChatPrintf.cpp  ChatPrintf.hpp  Color.hpp  EntityHandle.hpp  InterfaceReg.hpp  Padding.hpp  SDK.cpp  TickTimeConversion.hpp  VirtualMethod.hpp
Source/Serialization/: GrenadeSerialization.cpp  GrenadeSerialization.hpp  Materials.cpp  Materials.hpp  Serialization.cpp  Serialization.hpp
Source/Utils/: ApproxRollingAverage.hpp  BulletSimulation.cpp  BulletSimulation.hpp  CRC.cpp  CRC.hpp  EmergencyCrash.hpp  HTMLEscape.cpp  HTMLEscape.hpp  Interval.hpp  Log.hpp  Logging.cpp  Logging.hpp  MovementQuantization.cpp  MovementQuantization.hpp  MutexGuard.hpp  Prediction.cpp  Prediction.hpp  Projection.cpp  Projection.hpp  Protobuf.cpp  Protobuf.hpp  SDL.cpp  SDL.hpp  SmoothedPing.hpp  ThreadExecutor.cpp  ThreadExecutor.hpp  UninitializedObject.hpp  VMT.cpp  VMT.hpp  VTexDecoder.cpp  VTexDecoder.hpp
(+345 files in other folders)
